gcc/testsuite/gfortran.dg/module_procedure_double_colon_3.f90
! { dg-do compile }
! { dg-options "-std=f2003" }
!
! PR fortran/49265
!
! Contributed by Erik Toussaint
!
module m1
  implicit none
  interface foo
     procedure :: bar ! { dg-error "Fortran 2008: double colon in MODULE PROCEDURE statement" }
  end interface
contains
  subroutine bar
  end subroutine
end module
